plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.2'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'ca.mcgill.ecse321'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.postgresql:postgresql:42.7.3'
	implementation 'org.springframework.boot:spring-boot-devtools'
	implementation 'org.hibernate.validator:hibernate-validator'
	implementation 'com.auth0:java-jwt:4.4.0'
	runtimeOnly 'org.postgresql:postgresql'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'com.h2database:h2'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.4.0'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-api:2.4.0'
	implementation "com.stripe:stripe-java:24.20.0"
	testImplementation 'org.apache.httpcomponents.client5:httpclient5:5.2.1'
}

tasks.named('test') {
	useJUnitPlatform()
}
